V3 - Added DMC5 library

--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -35,6 +35,15 @@
             "compressedSize": 469315675,
             "uncompressedSize": 2471402753,
             "URL": "1_Sp2XObTRN0sfgVafbs6T2m6u8ez1WQ8"
+        },
+        {
+            "displayName": "Devil May Cry 5",
+            "gameName": "DMC5",
+            "timestamp": "2025-02-07 23:04:35",
+            "CRC": 3754408240,
+            "compressedSize": 316416619,
+            "uncompressedSize": 1743424377,
+            "URL": "1WBDOYNOz1H5mN2wd3jhMNC_4SDBY4X5V"
         }
         
     ]
