--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -3,61 +3,61 @@
         {
             "displayName": "Monster Hunter Wilds",
             "gameName": "MHWILDS",
-            "releaseDescription": "Open Beta 2 support.",
-            "timestamp": "2025-02-15 00:06:07",
-            "CRC": 122220802,
-            "compressedSize": 101136155,
-            "uncompressedSize": 938080650,
+            "releaseDescription": "Full game support. Asset Library addon V0.6 or higher required.",
+            "timestamp": "2025-02-28 00:03:00",
+            "CRC": 1686147079,
+            "compressedSize": 180111375,
+            "uncompressedSize": 2709862589,
             "URL": "1OcOlko-RGWTsd3bjE0I72FrMhQKQ1WOK"
         },
         {
             "displayName": "Monster Hunter Rise",
             "gameName": "MHRSB",
-            "releaseDescription": "Supports latest game version.",
-            "timestamp": "2025-02-02 19:59:23",
-            "CRC": 2428404793,
-            "compressedSize": 541376991,
-            "uncompressedSize": 3313143545,
+            "releaseDescription": "Supports latest game version. Asset Library addon V0.6 or higher required.",
+            "timestamp": "2025-02-27 23:26:56",
+            "CRC": 1579301823,
+            "compressedSize": 259489316,
+            "uncompressedSize": 3029731341,
             "URL": "1V60gdk8TTo_mjhG8LlwZ3doKkxxMe60K"
         },
         {
             "displayName": "Resident Evil 2 Ray Tracing",
             "gameName": "RE2RT",
-            "releaseDescription": "Supports latest game version.",
-            "timestamp": "2025-02-02 20:08:22",
-            "CRC": 626903437,
-            "compressedSize": 187369835,
-            "uncompressedSize": 1001916197,
+            "releaseDescription": "Supports latest game version. Asset Library addon V0.6 or higher required.",
+            "timestamp": "2025-02-27 23:29:59",
+            "CRC": 1342006204,
+            "compressedSize": 82446046,
+            "uncompressedSize": 897495717,
             "URL": "1llw5_RuGN9amy2Zblv4Sj9Dnm-OUwjQy"
         },
         {
             "displayName": "Resident Evil 4",
             "gameName": "RE4",
-            "releaseDescription": "Supports latest game version.",
-            "timestamp": "2025-02-02 13:01:36",
-            "CRC": 777949153,
-            "compressedSize": 469315675,
-            "uncompressedSize": 2471402753,
+            "releaseDescription": "Supports latest game version. Asset Library addon V0.6 or higher required.",
+            "timestamp": "2025-02-27 04:34:51",
+            "CRC": 3043501433,
+            "compressedSize": 208470229,
+            "uncompressedSize": 2211530183,
             "URL": "1_Sp2XObTRN0sfgVafbs6T2m6u8ez1WQ8"
         },
         {
             "displayName": "Street Fighter 6",
             "gameName": "SF6",
-            "releaseDescription": "Supports Mai update.",
-            "timestamp": "2025-02-21 19:47:23",
-            "CRC": 1394975041,
-            "compressedSize": 554894773,
-            "uncompressedSize": 3159957007,
+            "releaseDescription": "Supports Mai update. Asset Library addon V0.6 or higher required.",
+            "timestamp": "2025-02-27 23:38:54",
+            "CRC": 811770984,
+            "compressedSize": 267561807,
+            "uncompressedSize": 2871075330,
             "URL": "1en__vKL2fkw0ScfscfE_HrZBbBAgZ7sF"
         },
         {
             "displayName": "Devil May Cry 5",
             "gameName": "DMC5",
-            "releaseDescription": "Supports latest game version.",
-            "timestamp": "2025-02-08 18:02:45",
-            "CRC": 4251953172,
-            "compressedSize": 321943096,
-            "uncompressedSize": 1747851496,
+            "releaseDescription": "Supports latest game version. Asset Library addon V0.6 or higher required.",
+            "timestamp": "2025-02-27 23:14:24",
+            "CRC": 3658268177,
+            "compressedSize": 150967055,
+            "uncompressedSize": 1576363771,
             "URL": "1WBDOYNOz1H5mN2wd3jhMNC_4SDBY4X5V"
         }
         
