--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -3,12 +3,12 @@
         {
             "displayName": "Monster Hunter Wilds",
             "gameName": "MHWILDS",
-            "releaseDescription": "Full game support. Asset Library addon V0.6 or higher required.",
-            "timestamp": "2025-02-28 00:03:00",
-            "CRC": 1686147079,
-            "compressedSize": 180111375,
-            "uncompressedSize": 2709862589,
-            "URL": "1OcOlko-RGWTsd3bjE0I72FrMhQKQ1WOK"
+            "releaseDescription": "Supports latest title update (TU1).",
+            "timestamp": "2025-04-04 08:50:56",
+            "CRC": 322250132,
+            "compressedSize": 179780009,
+            "uncompressedSize": 2902525604,
+            "URL": "1dNXn3-jSHYsE-74kGrRShsi_lTfLwyAY"
         },
         {
             "displayName": "Monster Hunter Rise",
