--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -63,12 +63,12 @@
         {
             "displayName": "Street Fighter 6",
             "gameName": "SF6",
-            "releaseDescription": "Supports Mai update.",
-            "timestamp": "2025-02-27 23:38:54",
-            "CRC": 811770984,
-            "compressedSize": 267561807,
-            "uncompressedSize": 2871075330,
-            "URL": "1en__vKL2fkw0ScfscfE_HrZBbBAgZ7sF"
+            "releaseDescription": "Supports Elena update.",
+            "timestamp": "2025-06-04 23:13:38",
+            "CRC": 1796662902,
+            "compressedSize": 274863726,
+            "uncompressedSize": 2951066963,
+            "URL": "1-PPTgmmS1zXxuhAicRtJNT_mvdea9cqz"
         },
         {
             "displayName": "Devil May Cry 5",
