--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -3,11 +3,11 @@
         {
             "displayName": "Monster Hunter Wilds",
             "gameName": "MHWILDS",
-            "releaseDescription": "Supports latest title update (TU1.5 SF6 Collab).",
-            "timestamp": "2025-05-30 22:23:53",
-            "CRC": 1049495845,
-            "compressedSize": 180964217,
-            "uncompressedSize": 2918348877,
+            "releaseDescription": "Supports latest title update (Title Update 2).",
+            "timestamp": "2025-06-30 07:10:18",
+            "CRC": 3263328125,
+            "compressedSize": 191942828,
+            "uncompressedSize": 3065353508,
             "URL": "1dNXn3-jSHYsE-74kGrRShsi_lTfLwyAY"
         },
         {
