--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -63,11 +63,11 @@
         {
             "displayName": "Street Fighter 6",
             "gameName": "SF6",
-            "releaseDescription": "Supports Elena update.",
-            "timestamp": "2025-06-04 23:13:38",
-            "CRC": 1796662902,
-            "compressedSize": 274863726,
-            "uncompressedSize": 2951066963,
+            "releaseDescription": "Supports Sagat update.",
+            "timestamp": "2025-08-06 00:45:41",
+            "CRC": 4081770798,
+            "compressedSize": 276837797,
+            "uncompressedSize": 2979260838,
             "URL": "1-PPTgmmS1zXxuhAicRtJNT_mvdea9cqz"
         },
         {
