--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -63,11 +63,11 @@
         {
             "displayName": "Street Fighter 6",
             "gameName": "SF6",
-            "releaseDescription": "Supports Sagat update.",
-            "timestamp": "2025-08-06 00:45:41",
-            "CRC": 4081770798,
-            "compressedSize": 276837797,
-            "uncompressedSize": 2979260838,
+            "releaseDescription": "Supports C. Viper update.",
+            "timestamp": "2025-10-17 02:01:49",
+            "CRC": 2759554687,
+            "compressedSize": 280931623,
+            "uncompressedSize": 3038740560,
             "URL": "1-PPTgmmS1zXxuhAicRtJNT_mvdea9cqz"
         },
         {
