--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -63,9 +63,9 @@
         {
             "displayName": "Street Fighter 6",
             "gameName": "SF6",
-            "releaseDescription": "Supports C. Viper update.",
-            "timestamp": "2025-10-17 02:01:49",
-            "CRC": 2759554687,
+            "releaseDescription": "Supports C. Viper update. (Hotfix 1)",
+            "timestamp": "2025-10-17 20:24:53",
+            "CRC": 1295510238,
             "compressedSize": 280931623,
             "uncompressedSize": 3038740560,
             "URL": "1-PPTgmmS1zXxuhAicRtJNT_mvdea9cqz"
