--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -3,11 +3,11 @@
         {
             "displayName": "Monster Hunter Wilds",
             "gameName": "MHWILDS",
-            "releaseDescription": "Supports latest title update (Title Update 3).",
-            "timestamp": "2025-09-29 04:47:30",
-            "CRC": 368106285,
-            "compressedSize": 201904644,
-            "uncompressedSize": 3215398139,
+            "releaseDescription": "Supports latest title update (Title Update 4).",
+            "timestamp": "2025-12-16 05:46:23",
+            "CRC": 3752595705,
+            "compressedSize": 212774331,
+            "uncompressedSize": 3365054053,
             "URL": "1dNXn3-jSHYsE-74kGrRShsi_lTfLwyAY"
         },
         {
@@ -19,6 +19,16 @@
             "compressedSize": 259489316,
             "uncompressedSize": 3029731341,
             "URL": "1V60gdk8TTo_mjhG8LlwZ3doKkxxMe60K"
+        },
+        {
+            "displayName": "Pragmata",
+            "gameName": "PRAG",
+            "releaseDescription": "Supports Sketchbook demo. RE Mesh Editor v0.60 or higher required.",
+            "timestamp": "2025-12-15 18:27:34",
+            "CRC": 25335918,
+            "compressedSize": 8456453,
+            "uncompressedSize": 355229587,
+            "URL": "1H0oP5KIObN9H13OAXn2eMm8MTD2u-pOP"
         },
         {
             "displayName": "Onimusha 2",
