--- a/REAssetLib_directory.json
+++ b/REAssetLib_directory.json
@@ -3,11 +3,11 @@
         {
             "displayName": "Monster Hunter Wilds",
             "gameName": "MHWILDS",
-            "releaseDescription": "Supports latest title update (Title Update 4).",
-            "timestamp": "2025-12-16 05:46:23",
-            "CRC": 3752595705,
-            "compressedSize": 212774331,
-            "uncompressedSize": 3365054053,
+            "releaseDescription": "Supports latest title update (Feb 18th Update).",
+            "timestamp": "2026-02-18 06:10:20",
+            "CRC": 660242928,
+            "compressedSize": 216836055,
+            "uncompressedSize": 3437001092,
             "URL": "1dNXn3-jSHYsE-74kGrRShsi_lTfLwyAY"
         },
         {
